--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -6,7 +6,7 @@
 
 // Colors
 $white: #fff;
-$taupe: #c7bfbf;
+$taupe: #8a857e;
 $dark-taupe: #a7a3a3;
 
 $black: #000;
@@ -14,10 +14,10 @@ $dark-grey: #4E4E4E;
 $medium-grey: #767676;
 $grey: #c7bfbf;
 
-$theme-dark: #31364c;
-$theme-light: #473f6c;
-$theme-medium: #67588c;
-$theme-lightest: #afa0d3;
+$theme-dark: #353f39;
+$theme-light: #4d303e;
+$theme-medium: #4a7a4c;
+$theme-lightest: #60815f;
 
 // Fonts
 $primary-font: Anton,sans-serif;
